# aws_genai_stuff

./: .gitignore  CLAUDE.md  app.py  hello.py  pyproject.toml
.github/workflows/: synth_and_deploy.yml
scripts/: titan_g1_test.py
src/app/benchmarks/s3load/: generate_dataset.py  main.py  model.py  s3dataset.py  sm_job.py  train_utils.py
src/infra/: sagemaker_stack.py  storage_stack.py
