[project]
name = "my_training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "aws-cdk-lib>=2.234.1",
    "boto3>=1.42.28",
    "numpy>=2.4.1",
    "nvidia-ml-py>=13.590.44",
    "psutil>=7.2.1",
    "s3torchconnector>=1.4.3",
    "sagemaker>=3.3.1",
    "tdqm>=0.0.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
