[project]
name = "my_training"
version = "0.1.0"
description = "Nothing to see here..."
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "aws-cdk-lib>=2.234.1",
    "boto3>=1.42.28",
    "numpy>=2.4.1",
    "psutil>=7.2.1",
    "tdqm>=0.0.1",
]

[project.optional-dependencies]
sagemaker = [
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "nvidia-ml-py>=13.590.44",
    "s3torchconnector>=1.4.3",
    "sagemaker>=3.3.1",
]
notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.28.0",
    "ipywidgets>=8.1.0",
    "nbformat>=5.9.0",
]
